[gd_scene load_steps=4 format=3 uid="uid://cbbe6d753c2fq"]

[ext_resource type="Script" path="res://main.gd" id="1_kyqgd"]
[ext_resource type="Script" path="res://ai_api.gd" id="2_kk3kp"]

[sub_resource type="Theme" id="Theme_dmwok"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dmwok")
script = ExtResource("1_kyqgd")

[node name="SendBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1082.0
offset_top = 70.0
offset_right = 1129.0
offset_bottom = 101.0
text = "Send"

[node name="Messages" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 825.0
grow_vertical = 2

[node name="Input" type="TextEdit" parent="Messages"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Input"

[node name="Output" type="TextEdit" parent="Messages"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Response"

[node name="AiAPI" type="HTTPRequest" parent="."]
unique_name_in_owner = true
script = ExtResource("2_kk3kp")

[connection signal="pressed" from="SendBtn" to="." method="_on_send_btn_pressed"]
[connection signal="responded" from="AiAPI" to="." method="_on_ai_api_responded"]
